<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="-10dp"
        android:background="@drawable/cap_rounded"
        android:elevation="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/new_travel"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:isScrollContainer="true"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            tools:context=".ui.new_travel.NewTravelActivity">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/travelName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="360dp"
                android:layout_height="82dp"
                android:hint="@string/travel_name"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/main_green"
                app:counterEnabled="true"
                app:counterMaxLength="34"
                app:counterOverflowTextColor="@color/main_green"
                app:endIconMode="clear_text"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="52dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/departure"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/arrival"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.vicmikhailau.maskededittext.MaskedEditText
                    android:id="@+id/departure"
                    android:layout_width="160dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/data_hint"
                    android:inputType="numberSigned"
                    app:mask="##.##.####" />

                <com.vicmikhailau.maskededittext.MaskedEditText
                    android:id="@+id/arrival"
                    android:layout_width="160dp"
                    android:layout_height="60dp"
                    android:hint="@string/data_hint"
                    android:inputType="numberSigned"
                    app:mask="##.##.####" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/splitExpenses"
                android:layout_width="360dp"
                android:layout_height="82dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/split_expenses"
                android:textColor="@color/grey_text"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonMinus"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/circle_button"
                    android:text="@string/button_minus" />

                <EditText
                    android:id="@+id/peopleForSplit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="no"
                    android:enabled="false"
                    android:gravity="center"
                    android:inputType="number"
                    android:letterSpacing="1.5"
                    android:maxLength="1"
                    android:text="@string/min_split"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/buttonPlus"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/circle_button"
                    android:text="@string/button_plus" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/peopleList"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/human1"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="360dp"
                    android:layout_height="60dp"
                    android:hint="@string/human_name"
                    app:boxBackgroundMode="outline"
                    app:boxStrokeColor="@color/main_green"
                    app:counterOverflowTextColor="@color/main_green"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="52dp"
                        android:text="@string/human_1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/human2"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="360dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/human_name"
                    app:boxBackgroundMode="outline"
                    app:boxStrokeColor="@color/main_green"
                    app:counterOverflowTextColor="@color/main_green"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="52dp"
                        android:text="@string/human_2" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/cap_rounded"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:text="@string/save_travel"
                android:visibility="visible"
                android:layout_marginBottom="20dp" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>
